# memo-android

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qtquickcontrols2.conf
android/: AndroidManifest.xml
assets/i18n/: memo-ru.ts
cpp/: main.cpp
cpp/core/: Application.cpp  Application.h
cpp/database/: Database.cpp  Database.h  Migrater.cpp
cpp/treeview/: TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
i18n/: memo-ru.ts  memo_ru.ts
icons/memo/: index.theme
page/database/: DatabasePage.qml
qml/: AboutDialog.qml  Main.qml
qml/main/: MenuToolButton.qml  NavigationMenu.qml  OptionsMenuToolButton.qml
qml/page/: NamePage.qml
qml/page/database/: ConnectPage.qml  CreatePage.qml  DatabasePage.qml  OpenPage.qml
qml/page/view/: NameDialog.qml  NotePage.qml  NoteTreePage.qml  NoteTreeView.qml
qml/pages/: NamedPage.qml
qml/pages/database/: ConnectDatabasePage.qml  ConnectPage.qml  CreateDatabasePage.qml  CreatePage.qml  DatabasePage.qml  OpenDatabasePage.qml  OpenPage.qml
qml/pages/treeview/: NotePage.qml  NoteTreePage.qml
src/: main.cpp
src/core/: Application.h
src/database/: Database.cpp  Database.h  Migrater.cpp  Migrater.h
src/treeview/: TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
